@startuml
abstract class com.example.lb2_javafx.Shape {
+ Color color
~ {abstract}void draw(GraphicsContext)
}


class com.example.lb2_javafx.Line {
+ double x
+ double y
+ void draw(GraphicsContext)
}


class com.example.lb2_javafx.Rectangle {
+ double length
+ double width
+ double area()
+ void draw(GraphicsContext)
}


class com.example.lb2_javafx.Triangle {
+ void draw(GraphicsContext)
}

class com.example.lb2_javafx.HelloController {
- Label welcomeText
- Canvas canvas
- Button draw
- TextField textField
- ColorPicker colorPicker
# void onHelloButtonClick()
}


class com.example.lb2_javafx.HelloApplication {
+ void start(Stage)
+ {static} void main(String[])
}



com.example.lb2_javafx.Shape <|-- com.example.lb2_javafx.Line
com.example.lb2_javafx.Shape <|-- com.example.lb2_javafx.Rectangle
com.example.lb2_javafx.Shape <|-- com.example.lb2_javafx.Triangle
javafx.application.Application <|-- com.example.lb2_javafx.HelloApplication
@enduml